--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="#footer">Contactanos</a></li>
                 
-                <li><a href="Login.html">Ingresar</a></li>
+                <li><a href="login.html">Ingresar</a></li>
 
             </ul>
             
